setnewwinprops (0.8) unstable; urgency=medium

  * l

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Sun, 25 Sep 2022 11:13:07 +0200

setnewwinprops (0.7) unstable; urgency=medium

  * daemon actions:
    - start
    - stop
    - reload
  * process management:
    - take care of terminate children process when related windows
    are closed.
    - finish waiting for focus when the window is closed.

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Sat, 24 Sep 2022 11:56:56 +0200

setnewwinprops (0.6) unstable; urgency=medium

  * bin/setnewwinprops-daemon.sh:
    Has been renamed to bin/setnewwinprops.sh
  * introduce new window properties to check:
    - state
    - app name
  * some code improvements

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Wed, 21 Sep 2022 14:02:20 +0200

setnewwinprops (0.5) unstable; urgency=low

  * config.txt:
    Debug values may be:
    - empty string (default)
    - y|verbose
    - xtrace
  * bin/setnewwinprops-daemon.sh WindowSetup():
    - wait until the window has focus
    - much better error management

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Mon, 19 Sep 2022 14:37:40 +0200

setnewwinprops (0.4) unstable; urgency=low

  * write debug messages in verbose level.

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Sun, 18 Sep 2022 17:37:40 +0200

setnewwinprops (0.3) unstable; urgency=low

  * implement more window properties.
  * some code improvements.

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Sat, 17 Sep 2022 20:37:40 +0200

setnewwinprops (0.2) unstable; urgency=low

  * Define objects:
    Rules and Windows
  * Rename variables and functions according to the name of the related objects.

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Fri, 16 Sep 2022 10:37:40 +0200

setnewwinprops (0.1) unstable; urgency=low

  * Change window properties for opening windows
    according to a set of configurable rules.
  * Initial Release.

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Tue, 30 Aug 2022 10:37:40 +0200
