@@ -1,6 +1,12 @@
 setnewwinprops (0.8) unstable; urgency=medium
 
-  * l
+  * daemon actions:
+    - start
+    - stop
+    - restart
+    - status
+    - reload
+  * some code improvements
 
  -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Sun, 25 Sep 2022 11:13:07 +0200
 
